--- a/libs/instant-quote/src/lib/instant-quote/instant-quote.component.html
+++ b/libs/instant-quote/src/lib/instant-quote/instant-quote.component.html
@@ -5,8 +5,8 @@
             <div>1 / 2</div>
             <div>Validate Quotation</div>
         </div>
-        <div class="col-12 col-lg-5"><iframe src="https://koalendar.com/e/have-us-call-you?embed=true" width="100%"
-                height="800px" frameborder="0" class="calendar-border"></iframe></div>
+        <!-- <div class="col-12 col-lg-5"><iframe src="https://koalendar.com/e/have-us-call-you?embed=true" width="100%"
+                height="800px" frameborder="0" class="calendar-border"></iframe></div> -->
         <div class="col-12 col-lg-7">
             <div class="row">
                 <div class="col-12 col-lg-10">
@@ -15,42 +15,21 @@
                         Please complete the process to receive a final quote</div>
                 </div>
                 <div class="col-12 col-lg-2">
-                    <div class="hours-header">Hours</div>
-                    <div class="input-hours">
-                        <input type="number" name="" id="" value="3">
+                    <div class="hours-container">
+                        <span class="Text-hours"> {{ 'HOURS_ESTIMATES.HOURS' | translate }} </span>
+                        <div class="hours-grp">
+                            <span class="hours-btn" (click)="updateQuantity(-1)"
+                                style="border-top-left-radius: 5px; border-bottom-left-radius: 5px">-</span>
+                            <input type="number" min="1" step="1" [formControl]="hoursControl" />
+                            <span class="hours-btn" (click)="updateQuantity(1)"
+                                style="border-top-right-radius: 5px; border-bottom-right-radius: 5px">+</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-2 step-number">Step 1:</div>
-                <div class="col-9 step-header">Select a service </div>
-                <div class="col-1 step-complete">done</div>
-                <div class="col-12 service-step-content">
-
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-2 step-number">Step 1:</div>
-                <div class="col-9 step-header">Select a service </div>
-                <div class="col-1 step-complete">done</div>
-                <div class="col-12 space-step-content">
-
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-2 step-number">Step 1:</div>
-                <div class="col-9 step-header">Select a service </div>
-                <div class="col-1 step-complete">done</div>
-                <div class="col-12 product-step-content">
-
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-2 step-number">Step 1:</div>
-                <div class="col-9 step-header">Select a service </div>
-                <div class="col-1 step-complete">done</div>
-                <div class="col-12 information-step-content">
-
+            <div class="accordion" id="accordionQuote">
+                <div class="row">
+                    <iq-quote-service></iq-quote-service>
                 </div>
             </div>
         </div>
