new:privacy policy page creation

--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -145,3 +145,10 @@ a {
   align-items: center;
   justify-content: center;
 }
+
+main {
+  @media (max-width: 575px) {
+    margin-top: 20%;
+  }
+  margin-top: 100px;
+}
