--- a/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.html
@@ -1,4 +1,4 @@
-<section style="margin-top: 100px;">
+<section>
   <div class="container-fluid cff-v2-hero-section p-3 p-md-5 mb-5">
     <div class="row align-items-center" style="row-gap: 24px;">
       <div class="col-12 col-lg-6 d-flex flex-column align-items-center align-items-md-start">
