--- a/apps/website/mfe/src/app/components/privacy-policy/privacy-policy.component.html
+++ b/apps/website/mfe/src/app/components/privacy-policy/privacy-policy.component.html
@@ -1,1 +1,7 @@
-<p>privacy-policy works!</p>
+<cff-header class="header"></cff-header>
+<main role="main" class="d-flex flex-column" style="margin-top: 0px;">
+    <pp-hero-section></pp-hero-section>
+    <pp-content-section></pp-content-section>
+    <wc-how-it-works></wc-how-it-works>
+</main>
+<clutterfreefinds-v2-footer></clutterfreefinds-v2-footer>
