fix:alignment of how it works

--- a/apps/website/mfe/src/app/components/privacy-policy/privacy-policy.component.html
+++ b/apps/website/mfe/src/app/components/privacy-policy/privacy-policy.component.html
@@ -2,6 +2,6 @@
 <main role="main" class="d-flex flex-column" style="margin-top: 0px;">
     <pp-hero-section></pp-hero-section>
     <pp-content-section></pp-content-section>
-    <wc-how-it-works></wc-how-it-works>
+    <wc-how-it-works class="container"></wc-how-it-works>
 </main>
 <clutterfreefinds-v2-footer></clutterfreefinds-v2-footer>
