wip: create a slider section

--- a/apps/website/mfe/src/app/components/about-us/about-us.component.html
+++ b/apps/website/mfe/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,7 @@
-<p>about-us works!</p>
+<main role="main" class="d-flex flex-column container">
+    <about-hero-section></about-hero-section>
+    <about-who-is-section></about-who-is-section>
+    <about-our-vision></about-our-vision>
+    <about-our-mision></about-our-mision>
+    <wc-how-it-works class=""></wc-how-it-works>
+</main>
