--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -107,10 +107,10 @@
         <div class="row mt-3">
             <div class="col-12 col-xl-6 col-lg-6">
                 <div class="row mb-3 privacy-links">
-                    <span><a [href]="APP_URL + '/service-agreement'">
+                    <span><a [href]="'/service-agreement'">
                             {{ 'FOOTER.SERVICE_AGREEMENT' | translate }}
                         </a></span>
-                    <span><a [href]="APP_URL + '/privacy-policy'">
+                    <span><a [href]="'/privacy-policy'">
                             {{ 'FOOTER.PRIVACY_POLICY' | translate }}
                         </a></span>
                 </div>
