--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -15,7 +15,7 @@
             Company
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">About Us</a></li>
+            <li><a class="dropdown-item" href="/about-us">About Us</a></li>
             <li><a class="dropdown-item" href="#">Become A Partner</a></li>
           </ul>
         </li>
