fix: about us page

--- a/apps/website/mfe/src/app/components/about-us/sections/hero-section/hero-section.component.html
+++ b/apps/website/mfe/src/app/components/about-us/sections/hero-section/hero-section.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="row align-items-center">
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-5" style="margin-bottom: 24px;">
             <div class="about-hero-section-title">{{'ABOUT_US_PAGE.HERO_SECTION.TITLE' | translate}}</div>
             <div class="about-hero-section-description">{{'ABOUT_US_PAGE.HERO_SECTION.DESCRIPTION'| translate}}</div>
             <div
@@ -15,6 +15,7 @@
                 </button>
             </div>
         </div>
+        <div class="col-lg-1"></div>
         <div class="col-12 col-lg-6">
             <img src="/assets/images/bg/about-us.png" class="img-fluid"
                 [alt]="'ABOUT_US_PAGE.HERO_SECTION.TITLE' | translate" width="813" height="813">
