--- a/apps/website/mfe/src/app/components/about-us/about-us.component.html
+++ b/apps/website/mfe/src/app/components/about-us/about-us.component.html
@@ -1,6 +1,6 @@
-<main role="main" class="d-flex flex-column container">
-    <about-hero-section></about-hero-section>
-    <about-who-is-section></about-who-is-section>
+<main role="main" class="d-flex flex-column container position-relative">
+    <about-hero-section class="z-1"></about-hero-section>
+    <about-who-is-section class="z-n1" style="margin-top: -80px;"></about-who-is-section>
     <about-our-vision></about-our-vision>
     <about-our-mision></about-our-mision>
     <wc-how-it-works class=""></wc-how-it-works>
