--- a/apps/website/mfe/src/app/components/about-us/sections/who-is-section/who-is-section.component.scss
+++ b/apps/website/mfe/src/app/components/about-us/sections/who-is-section/who-is-section.component.scss
@@ -26,3 +26,93 @@
     background-color: var(--purple);
   }
 }
+
+.carousel-indicators [data-bs-target] {
+  border-radius: 50%;
+  background-color: #c2d1d9;
+  &:nth-child(1) {
+    width: 12px;
+    height: 12px;
+    &.active {
+      background-color: var(--purple);
+      width: 16px;
+      height: 16px;
+    }
+  }
+  &:nth-child(2) {
+    width: 12px;
+    height: 12px;
+    &.active {
+      background-color: var(--purple);
+      width: 16px;
+      height: 16px;
+    }
+  }
+  &:nth-child(3) {
+    width: 10px;
+    height: 10px;
+    &.active {
+      background-color: var(--purple);
+      width: 16px;
+      height: 16px;
+    }
+  }
+  &:nth-child(4) {
+    width: 8px;
+    height: 8px;
+    &.active {
+      background-color: var(--purple);
+      width: 16px;
+      height: 16px;
+    }
+  }
+}
+.carousel-indicators {
+  flex-direction: column;
+  position: relative;
+  margin: 0;
+  align-items: center;
+}
+.img-fluid {
+  max-inline-size: 100%;
+  block-size: auto;
+  object-fit: cover;
+  object-position: top center;
+}
+.carousel-image {
+  @extend .img-fluid;
+  border-radius: 16px;
+  width: 240px;
+  height: 240px;
+  margin-bottom: 24px;
+
+  @media (max-width: 1400px) {
+    width: 180px;
+    height: 180px;
+  }
+}
+
+.isLast,
+.isFirst {
+  @extend .img-fluid;
+  border-radius: 16px;
+  width: 120px;
+  height: 120px;
+}
+
+.isLast {
+  margin-left: 24px;
+  transform: translateY(-50%);
+  @media (max-width: 1400px) {
+    transform: translateY(-30%);
+  }
+}
+
+.isFirst {
+  margin-right: 24px;
+  transform: translateY(50%);
+
+  @media (max-width: 1400px) {
+    transform: translateY(30%);
+  }
+}
