--- a/libs/shared/toastr/src/lib/toastr/toastr.component.scss
+++ b/libs/shared/toastr/src/lib/toastr/toastr.component.scss
@@ -9,13 +9,13 @@
   filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.12));
   border-radius: 16px !important;
   box-shadow: none !important;
-  background-image: url('~libs/shared/assets/icons/error.svg') !important;
+  background-image: url('~libs/assets/icons/error.svg') !important;
 }
 .toast-error {
-  background-image: url('~libs/shared/assets/icons/error.svg') !important;
+  background-image: url('~libs/assets/icons/error.svg') !important;
 }
 .toast-success {
-  background-image: url('~libs/shared/assets/icons/green-tick.svg') !important;
+  background-image: url('~libs/assets/icons/green-tick.svg') !important;
 }
 .toast-title {
   color: var(--purple) !important;
