make header items

--- a/libs/shared/header/src/lib/header/header.component.scss
+++ b/libs/shared/header/src/lib/header/header.component.scss
@@ -13,7 +13,7 @@ nav {
   border-color: transparent;
   // position: absolute;
   width: 324px;
-  display: flex;
+  // display: flex;
   flex-direction: column;
   gap: 12px;
   padding: 10px 15px;
