--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -1,51 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg fixed-top">
-  <div class="container-fluid pt-2" style="max-width: 1440px">
-    <a class="navbar-brand me-5" href="/">
-      <img src="/assets/images/logo.svg" alt="Clutter Free Finds Logo" width="50" />
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Company
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/about-us">About Us</a></li>
-            <li><a class="dropdown-item" href="#">Become A Partner</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Resources
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Organizing Guide</a></li>
-            <li><a class="dropdown-item" href="#">Organizing Checklist</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Gifts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Store</a>
-        </li>
-      </ul>
-      <cff-language></cff-language>
-      <a href="/instant-quote" class="btn primary-btn" type="button">
-        {{ 'HEADER.BUTTON_1'| translate }}
-      </a>
-    </div>
-  </div>
-</nav> -->
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid pt-2" style="max-width: 1440px">
     <a class="navbar-brand me-5" href="/">
@@ -63,7 +15,7 @@
             Company
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li class="header-item-container"><a class="dropdown-item h-100" href="/about-us">
+            <li class="header-item-container"><a class="dropdown-item h-100" href="/about">
                 <div class="d-flex align-items-center h-100" style="column-gap: 16px;">
                   <div class="header-item-icon"><img [src]="'assets/header/about.svg'" alt="about clutter free finds">
                   </div>
