chore: add files and imporve code

--- a/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
+++ b/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
@@ -5,12 +5,12 @@
         <div class="d-flex flex-column flex-md-row align-items-start justify-content-md-center align-items-md-center"
             style="column-gap: 32px; row-gap: 8px;">
             <button class="btn primary-btn" type="button">
-                <a href="">{{
+                <a [routerLink]="'/instant-quote'">{{
                     'HOW_IT_WORKS.BUTTON_1' | translate
                     }}</a>
             </button>
             <button class="btn secondary-btn" type="button">
-                <a href="">{{
+                <a [routerLink]="'/how-it-works'">{{
                     'HOW_IT_WORKS.BUTTON_2' | translate
                     }}</a>
             </button>
