chore: add header routes how-it-works

--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -15,7 +15,7 @@
             Company
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li class="header-item-container"><a class="dropdown-item h-100" href="/about">
+            <li class="header-item-container"><a class="dropdown-item h-100" [routerLink]="'/about'">
                 <div class="d-flex align-items-center h-100" style="column-gap: 16px;">
                   <div class="header-item-icon"><img [src]="'assets/header/about.svg'" alt="about clutter free finds">
                   </div>
@@ -23,6 +23,19 @@
                     <div class="header-item-title">About Us</div>
                     <div class="header-item-description">Who are we? What is our Vision? And Our Goals And
                       everything you need to know about Clutter Free Finds
+                    </div>
+                  </div>
+                </div>
+              </a></li>
+            <li class="header-item-container"><a class="dropdown-item h-100" [routerLink]="'/how-it-works'">
+                <div class="d-flex align-items-center h-100" style="column-gap: 16px;">
+                  <div class="header-item-icon"><img [src]="'assets/header/how-it-works.svg'"
+                      alt="how-it-works clutter free finds">
+                  </div>
+                  <div class="header-item-content">
+                    <div class="header-item-title">How it Works</div>
+                    <div class="header-item-description">Explore the step-by-step breakdown of our Professional
+                      Organizing approach
                     </div>
                   </div>
                 </div>
