--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -137,13 +137,16 @@ a {
   -webkit-text-fill-color: transparent;
 }
 .circle-check-green {
-  width: 18px;
-  height: 18px;
+  width: 18px !important;
+  height: 18px !important;
   background-color: var(--green);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  img {
+    width: 10px;
+  }
 }
 
 main {
