fix: header button to add quotation

--- a/apps/website/mfe/src/app/pages/how-it-works-page/how-it-works-page.component.html
+++ b/apps/website/mfe/src/app/pages/how-it-works-page/how-it-works-page.component.html
@@ -1,4 +1,4 @@
-<main role="main" class="d-flex flex-column container position-relative mb-5 mx-auto">
+<main role="main" class="d-flex flex-column container position-relative mb-5 mx-auto" style="margin-top: 100px;">
     <div class="how-it-works-title">{{'HOW_IT_WORKS_PAGE.TITLE' | translate}}</div>
     <div class="row  d-flex align-items-stretch justify-content-center" *ngFor="let step of steps; index as i">
         <div class="col-1 col-lg-2 how-it-works-rectangle p-0 position-relative">
