--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -3,10 +3,6 @@
     <a class="navbar-brand me-5" href="/">
       <img src="/assets/images/logo.svg" alt="Clutter Free Finds Logo" width="50" />
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown has-megamenu">
@@ -66,9 +62,15 @@
         </li> -->
       </ul>
       <cff-language></cff-language>
+    </div>
+    <div class="d-flex align-items-center">
       <a href="/instant-quote" class="btn primary-btn" type="button">
         {{ 'HEADER.BUTTON_1'| translate }}
       </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </div>
   </div>
 </nav>
