--- a/libs/shared/header/src/lib/header/header.component.scss
+++ b/libs/shared/header/src/lib/header/header.component.scss
@@ -8,6 +8,16 @@ nav {
       box-shadow: 0 0 0 0.25rem rgba(var(--accent-rgb), 0.25);
     }
   }
+  .primary-btn {
+    @media (max-width: 575px) {
+      padding: 10px 16px;
+      border-radius: 5px;
+      a {
+        font-size: 12px;
+        line-height: 16px;
+      }
+    }
+  }
 }
 .has-megamenu .dropdown-menu {
   border-color: transparent;
