make requests to firebase

--- a/libs/shared/toastr/src/lib/toastr/toastr.component.scss
+++ b/libs/shared/toastr/src/lib/toastr/toastr.component.scss
@@ -1,5 +1,5 @@
 :host {
-  background-color: var(--light);
+  padding: 15px !important;
   position: relative;
   overflow: hidden;
   margin: 0 0 6px;
@@ -9,16 +9,11 @@
   filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.12));
   border-radius: 16px !important;
   box-shadow: none !important;
-  background-image: url('~libs/assets/icons/error.svg') !important;
+  background-image: none !important;
 }
-.toast-error {
-  background-image: url('~libs/assets/icons/error.svg') !important;
-}
-.toast-success {
-  background-image: url('~libs/assets/icons/green-tick.svg') !important;
-}
+
 .toast-title {
-  color: var(--purple) !important;
+  color: var(--light) !important;
   font-weight: 600;
   font-size: 16px;
   line-height: 20px;
@@ -29,7 +24,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: rgba(var(--dark-rgb), 0.65) !important;
+  color: rgba(var(--light-rgb), 0.85) !important;
 }
 .btn-pink {
   display: none;
