wip: quotation services selection working

--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
@@ -14,8 +14,8 @@
             <div class="cff-services">
                 <div class="d-flex" *ngFor="let service of cffServices; index as i;">
                     <input type="radio" name="service" [id]="'radio-btn-'+i" [value]="service"
-                        [(ngModel)]="selectedCffService.isSelected" [ngModelOptions]="{standalone: true}"
-                        (change)="selectedService($event)" />
+                        [(ngModel)]="selectedCffService" [ngModelOptions]="{standalone: true}"
+                        (ngModelChange)="selectedService(service)" />
                     <label [for]="'radio-btn-'+i" class="cff-service">
                         <img [src]="'/assets/icons/cff-services/' +service.label+'.svg'" [alt]="service.name">
                         {{service.name}}
