--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -10,7 +10,7 @@
         <div class="col-12 col-lg-7">
             <div class="row">
                 <div class="col-8 col-lg-10">
-                    <div class="estimate-price">KSH 0.00-0.00</div>
+                    <div class="estimate-price">KSH {{serviceSelected.price}}.00-0.00</div>
                     <div class="estimate-price-info">Estimated price range may be inaccurate,<br>
                         Please complete the process to receive a final quote</div>
                 </div>
@@ -18,16 +18,16 @@
                     <div class="hours-container">
                         <span class="hours-header"> {{ 'HOURS_ESTIMATES.HOURS' | translate }} </span>
                         <div class="hours-grp">
-                            <span class="hours-btn">4</span>
+                            <span class="hours-btn">0</span>
                             <span class="houts-to">to</span>
-                            <span class="hours-btn">8</span>
+                            <span class="hours-btn">0</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class=" accordion" id="accordionQuote">
                 <div class="row">
-                    <iq-quote-service></iq-quote-service>
+                    <iq-quote-service (selectedService$)="getMAxMinHours($event)"></iq-quote-service>
                 </div>
             </div>
         </div>
