new: component quotation space

--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -28,6 +28,7 @@
             <div class=" accordion" id="accordionQuote">
                 <div class="row">
                     <iq-quote-service (selectedService$)="getMAxMinHours($event)"></iq-quote-service>
+                    <iq-quote-space></iq-quote-space>
                 </div>
             </div>
         </div>
