--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -10,7 +10,9 @@
         <div class="col-12 col-lg-7">
             <div class="row">
                 <div class="col-8 col-lg-10">
-                    <div class="estimate-price">KSH {{serviceSelected.price}}.00-0.00</div>
+                    <div class="estimate-price">KSH
+                        {{(serviceSelected.price)*(spaceSelected.minHours)}}-{{(serviceSelected.price)*(spaceSelected.maxHours)}}
+                    </div>
                     <div class="estimate-price-info">Estimated price range may be inaccurate,<br>
                         Please complete the process to receive a final quote</div>
                 </div>
@@ -18,17 +20,17 @@
                     <div class="hours-container">
                         <span class="hours-header"> {{ 'HOURS_ESTIMATES.HOURS' | translate }} </span>
                         <div class="hours-grp">
-                            <span class="hours-btn">0</span>
+                            <span class="hours-btn">{{spaceSelected.minHours}}</span>
                             <span class="houts-to">to</span>
-                            <span class="hours-btn">0</span>
+                            <span class="hours-btn">{{spaceSelected.maxHours}}</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class=" accordion" id="accordionQuote">
                 <div class="row">
-                    <iq-quote-service (selectedService$)="getMAxMinHours($event)"></iq-quote-service>
-                    <iq-quote-space></iq-quote-space>
+                    <iq-quote-service (selectedService$)="getPricingPerHour($event)"></iq-quote-service>
+                    <iq-quote-space (selectedSpaceEmit$)="getMAxMinHours($event)"></iq-quote-space>
                 </div>
             </div>
         </div>
