--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.scss
@@ -2,7 +2,7 @@
   background: transparent;
   border: none !important;
   border-radius: 8px;
-  padding: 20px 10px;
+  padding: 10px;
   .accordion-button {
     background: rgba(var(--purple-rgb), 0.07);
     color: var(--dark);
