--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
@@ -1,1 +1,28 @@
-<p>quote-space works!</p>
+<div class="accordion-item ">
+    <h2 class="accordion-header" id="headingSpace">
+        <button [class.isActive]="selectedSpace.isSelected" class="accordion-button" type="button"
+            data-bs-toggle="collapse" data-bs-target="#collapseSpace" aria-expanded="true"
+            aria-controls="collapseSpace">
+            <div class="row steps w-100">
+                <div class="col-2 step-text-number">Step 2:</div>
+                <div class="col-10 step-text">Select a space </div>
+            </div>
+        </button>
+    </h2>
+    <div id="collapseSpace" class="accordion-collapse collapse show" aria-labelledby="headingSpace"
+        data-bs-parent="#accordionQuote">
+        <div class="accordion-body">
+            <div class="cff-spaces">
+                <div class="d-flex" *ngFor="let space of spacesArr; index as i;">
+                    <input type="radio" name="space" [id]="'radio-space-btn-'+i" [value]="space"
+                        [(ngModel)]="selectedSpace" [ngModelOptions]="{standalone: true}"
+                        (ngModelChange)="fnSelectSpace(space)" />
+                    <label [for]="'radio-space-btn-'+i" class="cff-space">
+                        {{space.name}}
+                    </label>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
