get material and update product

--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
@@ -4,7 +4,7 @@
             data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
             <div class="row steps w-100">
                 <div class="col-2 step-text-number">Step 1:</div>
-                <div class="col-10 step-text">Select a service </div>
+                <div class="col-10 step-text">Select Service </div>
             </div>
         </button>
     </h2>
