--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
@@ -5,11 +5,11 @@
             aria-controls="collapseSpace">
             <div class="row steps w-100">
                 <div class="col-2 step-text-number">Step 2:</div>
-                <div class="col-10 step-text">Select a space </div>
+                <div class="col-10 step-text">Select Space </div>
             </div>
         </button>
     </h2>
-    <div id="collapseSpace" class="accordion-collapse collapse show" aria-labelledby="headingSpace"
+    <div id="collapseSpace" class="accordion-collapse collapse " aria-labelledby="headingSpace"
         data-bs-parent="#accordionQuote">
         <div class="accordion-body">
             <div class="cff-spaces">
