--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -155,3 +155,23 @@ main {
   }
   margin-top: 100px;
 }
+
+span.mdc-tab__text-label {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  color: var(--dark) !important;
+}
+span.mdc-tab-indicator {
+  left: -50%;
+  width: 200% !important;
+}
+
+.mat-mdc-tab-body-wrapper {
+  padding: 10px;
+}
+.mat-mdc-tab-label-container {
+  margin-top: 10px;
+  background-color: rgba(var(--purple-rgb), 0.03);
+  border-radius: 8px;
+}
