--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.html
@@ -9,7 +9,7 @@
             </div>
         </button>
     </h2>
-    <div id="collapseMaterial" class="accordion-collapse collapse show" aria-labelledby="headingMaterial"
+    <div id="collapseMaterial" class="accordion-collapse collapse" aria-labelledby="headingMaterial"
         data-bs-parent="#accordionQuote">
         <div class="accordion-body">
             <div class="cff-materials">
