--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -32,6 +32,7 @@
                     <iq-quote-service (selectedService$)="getService($event)"></iq-quote-service>
                     <iq-quote-space (selectedSpaceEmit$)="getSpace($event)"></iq-quote-space>
                     <iq-quote-product (selectedMaterialEmit$)="getMaterial($event)"></iq-quote-product>
+                    <iq-quote-additonal-info></iq-quote-additonal-info>
                 </div>
             </div>
         </div>
