--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -175,3 +175,6 @@ span.mdc-tab-indicator {
   background-color: rgba(var(--purple-rgb), 0.03);
   border-radius: 8px;
 }
+.mat-calendar-body-label {
+  visibility: hidden;
+}
