--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -5,8 +5,9 @@
             <div>1 / 2</div>
             <div>Validate Quotation</div>
         </div>
-        <!-- <div class="col-12 col-lg-5"><iframe src="https://koalendar.com/e/have-us-call-you?embed=true" width="100%"
-                height="800px" frameborder="0" class="calendar-border"></iframe></div> -->
+        <div class="col-12 col-lg-5">
+            <iq-quote-calendar></iq-quote-calendar>
+        </div>
         <div class="col-12 col-lg-7">
             <div class="row">
                 <div class="col-8 col-lg-10">
