chore: update font assets and work on client details form

--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -5,7 +5,8 @@
             <div>1 / 2</div>
             <div>Validate Quotation</div>
         </div>
-        <div class="col-12 col-lg-5">
+        <!--step 1 and 2-->
+        <!-- <div class="col-12 col-lg-5">
             <iq-quote-calendar></iq-quote-calendar>
         </div>
         <div class="col-12 col-lg-7">
@@ -36,6 +37,12 @@
                     <iq-quote-additonal-info></iq-quote-additonal-info>
                 </div>
             </div>
+        </div> -->
+
+        <!--quote validation-->
+        <div class="col-12 col-lg-5">
+            <iq-quote-client-details></iq-quote-client-details>
         </div>
+        <div class="col-12 col-lg-5">Quote summary</div>
     </div>
 </main>
