--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.scss
@@ -6,7 +6,7 @@ main {
 .estimate-price {
   font-weight: 600;
   font-size: 42px;
-  line-height: 32px;
+  line-height: 120%;
   margin-bottom: 24px;
   @media (max-width: 575px) {
     font-size: 24px;
